[package]
name = "extension"
version = "0.1.0"
authors = ["zhangzhuang15 <2592004894@qq.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "extension"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.10.1"

[dependencies]
neon = "0.10.1"
